Added more plots+comments

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -22718,7 +22718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "ecb1bc7c",
    "metadata": {},
    "outputs": [
@@ -22732,14 +22732,14 @@
    ],
    "source": [
     "# --- 1. Price and Log Returns ---\n",
-    "# These features measure the percentage change from one period to the next.\n",
-    "# It helps the model understand momentum.\n",
+    "# Measures the percentage change from one period to the next.\n",
+    "# It helps the model understand MOMENTUM.\n",
     "print(\"--- Creating Price and Log Returns ---\")\n",
     "# Percentage change in the close price from the previous day.\n",
     "df_feat['price_return'] = df_feat['Close'].pct_change()\n",
     "\n",
     "# Log returns are often preferred in financial modeling.\n",
-    "df_feat['log_return'] = np.log(df_feat['Close'] / df_feat['Close'].shift(1))"
+    "df_feat['log_return'] = np.log(df_feat['Close'] / df_feat['Close'].shift(1)) # Helps short-term momentum."
    ]
   },
   {
@@ -22879,7 +22879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "a3b5052f",
    "metadata": {},
    "outputs": [
@@ -22894,14 +22894,11 @@
    "source": [
     "# --- 5. Rolling Statistics ---\n",
     "# These smooth out the data to identify trends and volatility over a window.\n",
-    "# Original plan was 24h, 7d, 30d. For daily data, we'll use 7d and 30d.\n",
     "print(\"--- Creating Rolling Statistics ---\")\n",
     "windows = [7, 30]\n",
     "for window in windows:\n",
-    "    # Rolling Mean (Moving Average)\n",
-    "    df_feat[f'close_roll_mean_{window}'] = df_feat['Close'].rolling(window=window).mean()\n",
-    "    # Rolling Standard Deviation (Volatility)\n",
-    "    df_feat[f'close_roll_std_{window}'] = df_feat['Close'].rolling(window=window).std()"
+    "    df_feat[f'close_roll_mean_{window}'] = df_feat['Close'].rolling(window=window).mean() # Trend (7-day average, 30-day average)\n",
+    "    df_feat[f'close_roll_std_{window}'] = df_feat['Close'].rolling(window=window).std() # Volatility (how much prices fluctuate in those windows)"
    ]
   },
   {
