--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -22852,7 +22852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "cfe97495",
    "metadata": {},
    "outputs": [
@@ -22867,10 +22867,9 @@
    "source": [
     "# --- 4. Lag Features ---\n",
     "# These give the model direct information about past prices.\n",
-    "# Original plan was for hourly (t-24 = 1 day). Since we have daily data:\n",
-    "# t-1 = 1 day ago\n",
-    "# t-7 = 1 week ago\n",
-    "# t-30 = 1 month ago\n",
+    "# 1 day ago\n",
+    "# 1 week ago\n",
+    "# 1 month ago\n",
     "print(\"--- Creating Lag Features ---\")\n",
     "lags = [1, 7, 30]\n",
     "for lag in lags:\n",
